[gd_scene load_steps=26 format=3 uid="uid://c0bdwlue70wgp"]

[ext_resource type="PackedScene" uid="uid://eey6l7a03sjc" path="res://_Features/rooms/setup/setup.blend" id="1_8c4o6"]
[ext_resource type="Script" path="res://_Features/rooms/setup/setup.gd" id="2_42fvx"]
[ext_resource type="PackedScene" uid="uid://ctv4r5oi50oy1" path="res://_Features/activables/activable/activable.tscn" id="2_n3fv0"]

[sub_resource type="BoxShape3D" id="BoxShape3D_1ljiy"]
size = Vector3(5.14087, 3.50208, 0.224121)

[sub_resource type="BoxShape3D" id="BoxShape3D_sgh2r"]
size = Vector3(2.77844, 3.50208, 0.224121)

[sub_resource type="BoxShape3D" id="BoxShape3D_ealo4"]
size = Vector3(0.224258, 3.50208, 8.17847)

[sub_resource type="BoxShape3D" id="BoxShape3D_4td12"]
size = Vector3(1.45002, 3.50208, 6.40759)

[sub_resource type="BoxShape3D" id="BoxShape3D_xjbd3"]
size = Vector3(2.26456, 3.50208, 1.06915)

[sub_resource type="BoxShape3D" id="BoxShape3D_c47ex"]
size = Vector3(0.789019, 3.50208, 1.18106)

[sub_resource type="BoxShape3D" id="BoxShape3D_7po3e"]
size = Vector3(0.789019, 3.50208, 5.91484)

[sub_resource type="BoxShape3D" id="BoxShape3D_bct7i"]
size = Vector3(1.05022, 3.50208, 0.882977)

[sub_resource type="BoxShape3D" id="BoxShape3D_304dh"]
size = Vector3(5.10715, 5.12116, 8.11554)

[sub_resource type="BoxShape3D" id="BoxShape3D_6o23c"]
size = Vector3(5.912, 4.86713, 0.224121)

[sub_resource type="BoxShape3D" id="BoxShape3D_psyju"]
size = Vector3(0.467178, 4.86713, 10.3911)

[sub_resource type="BoxShape3D" id="BoxShape3D_p35k4"]
size = Vector3(0.467178, 4.86713, 10.6099)

[sub_resource type="BoxShape3D" id="BoxShape3D_3mis7"]
size = Vector3(5.73682, 4.86713, 0.224121)

[sub_resource type="BoxShape3D" id="BoxShape3D_8yxuw"]
size = Vector3(1.44977, 2.23132, 1.65662)

[sub_resource type="BoxShape3D" id="BoxShape3D_tc74h"]
size = Vector3(1, 2.23132, 1.10474)

[sub_resource type="BoxShape3D" id="BoxShape3D_maox8"]
size = Vector3(1, 2.23132, 1.10474)

[sub_resource type="BoxShape3D" id="BoxShape3D_mt51r"]
size = Vector3(1, 2.23132, 1.10474)

[sub_resource type="BoxShape3D" id="BoxShape3D_k13vm"]
size = Vector3(1.14063, 1.8309, 1.92639)

[sub_resource type="BoxShape3D" id="BoxShape3D_dpuim"]
size = Vector3(0.958557, 2.23132, 1.92639)

[sub_resource type="BoxShape3D" id="BoxShape3D_kgij0"]
size = Vector3(1.33545, 3.39719, 1.26199)

[sub_resource type="BoxShape3D" id="BoxShape3D_qjbfh"]
size = Vector3(1.00049, 2.23132, 0.665104)

[sub_resource type="BoxShape3D" id="BoxShape3D_s1fqm"]
size = Vector3(1.00049, 2.23132, 0.632515)

[node name="setup" instance=ExtResource("1_8c4o6")]
script = ExtResource("2_42fvx")

[node name="StreamMarker" type="Marker3D" parent="." index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.283096, 0, 0.067403)

[node name="StreamOutMarker" type="Marker3D" parent="." index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.542691, 0, -1.2049)

[node name="StreamWrongMarker" type="Marker3D" parent="." index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.20883, 0, -0.04051)

[node name="WallsUpMarker" type="Marker3D" parent="." index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.867798, 3.01253, -4.54622)

[node name="WallsDownMarker" type="Marker3D" parent="." index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.868, 0, -3.17138)

[node name="PenetrationMarker" type="Marker3D" parent="." index="5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.797652, -1.39287, -3.01525)

[node name="Colliders" type="Node3D" parent="." index="6"]

[node name="StaticBody3D" type="StaticBody3D" parent="Colliders" index="0"]
collision_layer = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="Colliders/StaticBody3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0109638, 1.25104, 4.05034)
shape = SubResource("BoxShape3D_1ljiy")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Colliders/StaticBody3D" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.20018, 1.25104, -4.02996)
shape = SubResource("BoxShape3D_sgh2r")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="Colliders/StaticBody3D" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.54409, 1.25104, -0.0375528)
shape = SubResource("BoxShape3D_ealo4")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="Colliders/StaticBody3D" index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.4896, 1.25104, -0.0375528)
shape = SubResource("BoxShape3D_ealo4")

[node name="CollisionShape3D5" type="CollisionShape3D" parent="Colliders/StaticBody3D" index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.67462, 1.25104, 0.551943)
shape = SubResource("BoxShape3D_4td12")

[node name="CollisionShape3D6" type="CollisionShape3D" parent="Colliders/StaticBody3D" index="5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.26734, 1.25104, 3.22116)
shape = SubResource("BoxShape3D_xjbd3")

[node name="CollisionShape3D7" type="CollisionShape3D" parent="Colliders/StaticBody3D" index="6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.534435, 1.25104, 0.0768716)
shape = SubResource("BoxShape3D_c47ex")

[node name="CollisionShape3D8" type="CollisionShape3D" parent="Colliders/StaticBody3D" index="7"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.07557, 1.25104, -0.108303)
shape = SubResource("BoxShape3D_7po3e")

[node name="CollisionShape3D9" type="CollisionShape3D" parent="Colliders/StaticBody3D" index="8"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0167873, 1.25104, 1.75213)
shape = SubResource("BoxShape3D_bct7i")

[node name="CollidersUp" type="Node3D" parent="." index="7"]

[node name="StaticBody3D" type="StaticBody3D" parent="CollidersUp" index="0"]
collision_layer = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="CollidersUp/StaticBody3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0435191, 2.10041, 0.00661397)
shape = SubResource("BoxShape3D_304dh")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="CollidersUp/StaticBody3D" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0206881, 1.93356, -5.19219)
shape = SubResource("BoxShape3D_6o23c")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="CollidersUp/StaticBody3D" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.87336, 1.93356, 0.292196)
shape = SubResource("BoxShape3D_psyju")

[node name="CollisionShape3D5" type="CollisionShape3D" parent="CollidersUp/StaticBody3D" index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.54628, 1.93356, 0.119253)
shape = SubResource("BoxShape3D_p35k4")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="CollidersUp/StaticBody3D" index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.038064, 1.93356, 5.05628)
shape = SubResource("BoxShape3D_3mis7")

[node name="Activables" type="Node3D" parent="." index="8"]

[node name="StreamInActivable" parent="Activables" index="0" instance=ExtResource("2_n3fv0")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.871468, 0.690414, -0.560438)
activable_name = "StreamIn"
activable_text = "Hacer Stream"

[node name="ActionLabel" parent="Activables/StreamInActivable" index="0"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.11481, 2.5, 0.491371)

[node name="CollisionShape3D" parent="Activables/StreamInActivable" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.637519, 0.615662, 0.555268)
shape = SubResource("BoxShape3D_8yxuw")

[node name="StreamOutActivable" parent="Activables" index="1" instance=ExtResource("2_n3fv0")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.871468, 0.690414, -0.560438)
activable_name = "StreamOut"
activable_text = "Dejar de hacer stream"

[node name="ActionLabel" parent="Activables/StreamOutActivable" index="0"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.11481, 2.5, 0.491371)

[node name="FiniteStateMachine" parent="Activables/StreamOutActivable" index="1"]
initial_state = NodePath("Deactivated")

[node name="CollisionShape3D" parent="Activables/StreamOutActivable" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.587561, 0.615662, 0.564118)
shape = SubResource("BoxShape3D_tc74h")

[node name="StreamInIncorrectActivable" parent="Activables" index="2" instance=ExtResource("2_n3fv0")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.636316, 0.690414, -0.661427)
activable_name = "StreamWrong"
activable_text = "Hacer Stream"

[node name="ActionLabel" parent="Activables/StreamInIncorrectActivable" index="0"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.11481, 2.5, 0.491371)

[node name="FiniteStateMachine" parent="Activables/StreamInIncorrectActivable" index="1"]
initial_state = NodePath("Deactivated")

[node name="CollisionShape3D" parent="Activables/StreamInIncorrectActivable" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.587561, 0.615662, 0.564118)
shape = SubResource("BoxShape3D_maox8")

[node name="StreamOutInCorrectActivable" parent="Activables" index="3" instance=ExtResource("2_n3fv0")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.636316, 0.690414, -0.661427)
activable_name = "StreamOutWrong"
activable_text = "Dejar de hacer stream"

[node name="ActionLabel" parent="Activables/StreamOutInCorrectActivable" index="0"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.11481, 2.5, 0.491371)

[node name="FiniteStateMachine" parent="Activables/StreamOutInCorrectActivable" index="1"]
initial_state = NodePath("Deactivated")

[node name="CollisionShape3D" parent="Activables/StreamOutInCorrectActivable" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.587561, 0.615662, 0.564118)
shape = SubResource("BoxShape3D_mt51r")

[node name="WallsUpActivable" parent="Activables" index="4" instance=ExtResource("2_n3fv0")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 1.08159, 0.690414, -4.20817)
activable_name = "TouchWall"
activable_text = "Tocar la pared"
activable_alternative_text = "Subir la pared"

[node name="ActionLabel" parent="Activables/WallsUpActivable" index="0"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -0.795094, 2.5, -0.154641)

[node name="CollisionShape3D" parent="Activables/WallsUpActivable" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.545135, 0.133652, 0.375053)
shape = SubResource("BoxShape3D_k13vm")

[node name="JumpDownActivable" parent="Activables" index="5" instance=ExtResource("2_n3fv0")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 1.08159, 0.690414, -4.20817)
activable_name = "Jump Down"
activable_text = "Bajar pared"
activable_alternative_text = "Saltar"

[node name="ActionLabel" parent="Activables/JumpDownActivable" index="0"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -0.795094, 2.5, -0.154641)

[node name="FiniteStateMachine" parent="Activables/JumpDownActivable" index="1"]
initial_state = NodePath("Deactivated")

[node name="CollisionShape3D" parent="Activables/JumpDownActivable" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0746469, 3.39957, 0.375053)
shape = SubResource("BoxShape3D_dpuim")

[node name="ExitWindowActivable" parent="Activables" index="6" instance=ExtResource("2_n3fv0")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.982227, 1.69041, 3.56018)
activable_name = "Exit Window"
activable_text = "Salir por la ventana"

[node name="ActionLabel" parent="Activables/ExitWindowActivable" index="0"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.35687, 0.238513)

[node name="CollisionShape3D" parent="Activables/ExitWindowActivable" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.327864, 0.0784359, 1.51659)
shape = SubResource("BoxShape3D_kgij0")

[node name="BlindersUpActivable" parent="Activables" index="7" instance=ExtResource("2_n3fv0")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.982227, 0.690414, 3.56018)
activable_name = "Blinders Up"
activable_text = "Levantar la persiana"

[node name="ActionLabel" parent="Activables/BlindersUpActivable" index="0"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.305902, 2.5, 1.39338)

[node name="FiniteStateMachine" parent="Activables/BlindersUpActivable" index="1"]
initial_state = NodePath("Deactivated")

[node name="CollisionShape3D" parent="Activables/BlindersUpActivable" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0214708, 0.800177, 3.10001)
shape = SubResource("BoxShape3D_qjbfh")

[node name="BlindersDownActivable" parent="Activables" index="8" instance=ExtResource("2_n3fv0")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.982227, 0.690414, 3.56018)
activable_name = "Blinders Down"
activable_text = "Bajar la persiana"

[node name="ActionLabel" parent="Activables/BlindersDownActivable" index="0"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.3, 2.5, 1.4)

[node name="CollisionShape3D" parent="Activables/BlindersDownActivable" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0214708, 0.800177, 3.0972)
shape = SubResource("BoxShape3D_s1fqm")

[node name="cable raton" parent="." index="61"]
visible = false

[node name="neon twitch normal" parent="." index="66"]
visible = false

[node name="Skeleton3D" parent="Armature" index="0"]
bones/0/position = Vector3(0.000290527, -0.000467621, -0.642891)
bones/0/rotation = Quaternion(-0.706068, -0.00401005, -0.00426121, 0.70812)
bones/1/rotation = Quaternion(-0.0568932, -0.000501611, 0.00582982, 0.998363)
bones/7/rotation = Quaternion(0.55035, 0.457377, -0.509102, 0.478264)
bones/8/rotation = Quaternion(-0.0552708, 0.170289, -0.0417453, 0.982957)
bones/9/rotation = Quaternion(9.76587e-08, -0.275687, -4.78897e-09, 0.961247)
bones/10/rotation = Quaternion(0.0256385, 0.150267, 0.166225, 0.974234)
bones/11/rotation = Quaternion(0.203294, 0.109687, -0.189842, 0.954254)
bones/12/rotation = Quaternion(-0.0104348, 0.0524962, 0.38345, 0.922009)
bones/13/rotation = Quaternion(-0.185784, -0.288888, 0.342747, 0.874387)
bones/14/rotation = Quaternion(-2.08965e-07, 7.55535e-08, 2.007e-07, 1)
bones/15/rotation = Quaternion(0.0239197, 0.201509, -0.213534, 0.955628)
bones/16/rotation = Quaternion(-0.000253718, 0.00546821, 0.0552398, 0.998458)
bones/17/rotation = Quaternion(-0.000296955, -0.00522309, 0.0478244, 0.998842)
bones/18/rotation = Quaternion(-6.54691e-08, 5.03942e-08, -1.08055e-07, 1)
bones/19/rotation = Quaternion(0.0096995, 0.0555934, -0.16424, 0.984805)
bones/20/rotation = Quaternion(1.59046e-08, 1.85484e-05, 0.000175776, 1)
bones/21/rotation = Quaternion(-9.75934e-06, 0.00144237, -0.0145148, 0.999894)
bones/22/rotation = Quaternion(-4.77958e-08, -1.6419e-07, -7.5062e-08, 1)
bones/23/rotation = Quaternion(0.494709, -0.485717, 0.556036, 0.458439)
bones/24/rotation = Quaternion(-0.0608913, -0.210645, -0.0330946, 0.975103)
bones/25/rotation = Quaternion(3.42911e-08, 0.324341, -1.90018e-07, 0.94594)
bones/26/rotation = Quaternion(0.00564213, -0.188874, -0.0293191, 0.981547)
bones/27/rotation = Quaternion(0.214394, -0.0945821, -0.253444, 0.938539)
bones/28/rotation = Quaternion(0.0018717, 0.0205508, 0.130993, 0.991169)
bones/29/rotation = Quaternion(-2.5286e-07, -1.62044e-05, -0.214676, 0.976685)
bones/30/rotation = Quaternion(-1.05647e-07, 5.73636e-08, 5.44824e-08, 1)
bones/31/rotation = Quaternion(-0.103997, 0.88459, 0.0260373, -0.45388)
bones/32/rotation = Quaternion(0.00029433, -0.0035477, 0.0914233, 0.995806)
bones/33/rotation = Quaternion(0.000385763, 0.00399167, 0.0874734, 0.996159)
bones/34/rotation = Quaternion(1.58325e-08, -2.85218e-08, -7.72998e-08, 1)
bones/35/rotation = Quaternion(-0.0763362, 0.960984, 0.00519642, -0.26581)
bones/36/rotation = Quaternion(-1.79059e-05, 0.000439902, 0.0584316, 0.998291)
bones/37/rotation = Quaternion(2.03391e-05, 0.000460263, 0.0260383, 0.999661)
bones/38/rotation = Quaternion(1.59838e-07, -2.45345e-07, 3.55765e-07, 1)
bones/39/rotation = Quaternion(0.0321836, 0.0882584, 0.995055, -0.0322446)
bones/40/rotation = Quaternion(-0.273446, -0.072151, -0.0255717, 0.958837)
bones/41/rotation = Quaternion(0.594505, 0.0794922, 0.0294749, 0.79961)
bones/44/rotation = Quaternion(-0.00831831, 0.141788, 0.989458, 0.0282747)
bones/45/rotation = Quaternion(-0.304093, 0.112556, 0.0299572, 0.945495)
bones/46/rotation = Quaternion(0.566216, -0.103342, -0.0318874, 0.817131)

[node name="BezierCurve_002" parent="." index="88"]
transform = Transform3D(0, 0.430258, 0, -0.430218, 0, 0.00590222, 0.00590222, 0, 0.430218, 2.5, 2.16297, 1.3225)
visible = false

[node name="BezierCurve_003" parent="." index="89"]
transform = Transform3D(0, 0.430258, 0, -0.430218, 0, 0.00590222, 0.00590222, 0, 0.430218, 2.5, 2.16297, 1.3225)
visible = false

[editable path="Activables/StreamInActivable"]
[editable path="Activables/StreamOutActivable"]
[editable path="Activables/StreamInIncorrectActivable"]
[editable path="Activables/StreamOutInCorrectActivable"]
[editable path="Activables/WallsUpActivable"]
[editable path="Activables/JumpDownActivable"]
[editable path="Activables/ExitWindowActivable"]
[editable path="Activables/BlindersUpActivable"]
[editable path="Activables/BlindersDownActivable"]
